--- a/src/css/alltiny-selectbox.css
+++ b/src/css/alltiny-selectbox.css
@@ -1,6 +1,7 @@
 /* CSS rules for alltiny-selectbox */
-.selectbox .flyout {
-	position: absolute;
+.selectbox {
+	position: relative;
+	z-index: 1;
 }
 .selectbox .flyout ul {
     margin: 0;
@@ -8,7 +9,4 @@
 }
 .selectbox .flyout li {
     list-style: none;
-}
-.selectbox .flyout li.selected {
-    display: none;
 }
